# agent-finance-analyst-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: azure-container-apps.yml
.gtihub/: azure-container-apps.yml
.gtihub/workflows/: azure-container-apps.yml
app/: main.py  state.py
app/api/: v1.py  v1_chat.py  v1_kpi.py  v1_series.py
app/core/: config.py  logging.py
app/prompts/: finance_agent_system_prompt.md  fpna_cashflow_analysis.md  loader.py
app/services/: agent.py  dataframe.py
scripts/: build_push.sh
tests/: test_health.py
