[project]
name = "fastapi-uv-azure-template"
version = "0.1.0"
description = "FastAPI template with uv, ready for Azure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  # AI/ML stack
  "openai>=1.50",
  "langchain>=0.3",
  "langchain-openai>=0.2.0",
  "langchain-experimental>=0.3.0",
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "matplotlib>=3.9",
  # misc
  "httpx>=0.27",
  "tabulate>=0.9.0",
]

[tool.uv]
# include dev tools in a separate group
dev-dependencies = [
  "pytest>=8.3",
  "ruff>=0.6",
  "black>=24.8",
  "pytest-cov>=5.0",
  "types-requests"
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
